bad/var_decl_init_invalid_conversion_bool_array.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_bool_array.lat:3:12: [1;31merror: [0;1mincompatible types: cannot assign variable of type `boolean` with an expression of type `int[]`[m
	boolean x = new int[3];
	          [1;32m^[m
